# nflxport

./: .gitignore  Cargo.toml  README.md  output.txt
crates/nflxport-cli/: Cargo.toml
crates/nflxport-cli/src/: main.rs
crates/nflxport-core/: Cargo.toml
crates/nflxport-core/src/: cache.rs  dataset.rs  db.rs  fetcher.rs  lib.rs  manifest.rs  query.rs  source.rs  types.rs
crates/nflxport-wolfram/: Cargo.toml
crates/nflxport-wolfram/src/: export.rs  lib.rs
