[workspace]
members = [
    "crates/nflxport-core",
    "crates/nflxport-cli",
    "crates/nflxport-wolfram",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antigravity"]
license = "CC0-1.0"

[workspace.dependencies]
nflxport-core = { path = "crates/nflxport-core" }
nflxport-wolfram = { path = "crates/nflxport-wolfram" }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
polars = { version = "0.46", features = ["lazy", "parquet", "csv", "json", "dtype-date", "strings", "regex"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
camino = { version = "1.1", features = ["serde1"] }
sha2 = "0.10"
hex = "0.4"
tracing-appender = "0.2"
indicatif = "0.17"
duckdb = { version = "1.1", features = ["bundled"] }
